policies/gatekeeper/manifests/constraint-k8srequiredlabels.yml
---
# manifests/constraint-k8srequiredlabels.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: require-labels
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Namespace"]
  parameters:
    message: "The label `purpose` is required."
    labels:
      - key: purpose
        allowedRegex: ".+"
